<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="app_name">GLOSS</string>
    <string name="action_settings">Settings</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_in_short">Register</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_login">Already Registered!! sign in</string>
    <string name="email">Email</string>
    <string name="btn_login">Login</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="detected_text">Detected: %s</string>
    <string name="translation_text">Translation: %s</string>
    <string name="detected">Detected</string>
    <string name="translated">Translated</string>
    <string name="englishString">English</string>
    <string name="germanString">German</string>
    <string name="sign_out_String">Sign out</string>
    <string name="synonymString">Synonyms</string>
    <string name="Confirm"> Confirm Delete </string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your\nregistered Email to send you \npassword reset instructions.</string>
    <string name="hint_email">Email</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"> Back </string>
    <string name="Select_date">Select Date</string>
    <string name="View_DB">Translation History</string>

    <string name="title_location_permission">Location services Required</string>
    <string name="text_location_permission">The application requires access the devices location services</string>
    <string name="title_activity_maps2">Map</string>
    <string name="Transaltion_history">Translation History</string>
    <string name="view_map">View Map</string>
    <string name="info">INFO</string>

    <string name="marker_text">%s \n %s</string>
    <string name="account">Account</string>
    <string name="account_msg">To keep your \ntranslation history,\nLogin or Register with email and \npassword.</string>
    <string name="tap_to_translate">Tap to translate</string>
    <string name="tap_anywhere">Tap to capture. Pinch or Stretch to zoom</string>
    <string name="translating">Translating…</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="translation_history">Translation History</string>
    <string name="translated_from_to">Translated from %s to %s</string>
    <string name="right"><![CDATA[>]]></string>
    <string name="search">Search</string>

    <string name="holder">%s</string>
    <string name="hold">Location: %s</string>
    <string name="testStr">Tap here to Reset Camera</string>
    <string name="text_location_turned_off">The Application requires location to be turned for the most accurate results</string>
    <string name="backtrack">BACKTRACK</string>

</resources>
