<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    tools:context="com.chuck.artranslate.authentication.authSActivity">

    <include layout="@layout/half_logo_bg" />

    <include layout="@layout/form_head" />

    <LinearLayout
        android:layout_above="@+id/btnll"
        android:id="@+id/edtll"
        style="@style/form_holder">

        <EditText
            style="@style/myTexts.edit"
            android:id="@+id/pwdreset"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnll"
        android:layout_above="@+id/btn_reset_password"
        android:weightSum="2"
        style="@style/button_holder">

        <Button style="@style/myButton"
            android:layout_width="0dp"
            android:id="@+id/btn_reset"
            android:text="@string/btn_reset_password"
            android:layout_weight="2"/>

    </LinearLayout>

    <TextView style="@style/myTexts"
        android:visibility="invisible"
        android:layout_above="@id/sign_in_button"
        android:id="@+id/btn_reset_password"
        android:text="@string/btn_forgot_password" />

    <TextView style="@style/myTexts"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/pad_30"
        android:layout_marginBottom="@dimen/pad_30"
        android:layout_alignParentBottom="true"
        android:id="@+id/sign_in_button"
        android:text="@string/btn_link_to_login" />

</RelativeLayout>