<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_alignParentBottom="true"
    android:id="@+id/wholeView">

        <RelativeLayout
            android:id="@+id/bottom_view"
            android:visibility="gone"
            android:orientation="vertical"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="wrap_content"
            style="@style/fragment"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:id="@+id/header"
                android:orientation="vertical"
                android:background="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/detected_language"
                    android:textStyle="bold"
                    style="@style/myTexts.center.white"
                    android:text="@string/detected" />

                <TextView
                    style="@style/myTexts.center.white"
                    android:id="@+id/detected_text" />

                <ImageButton
                    android:id="@+id/down"
                    android:background="@color/colorPrimary"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/down_down"
                    android:layout_marginTop="@dimen/pad_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/box"
                android:visibility="gone"
                android:padding="@dimen/pad_30"
                android:layout_below="@+id/header"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/translated_language"
                    style="@style/myTexts.center"
                    android:textSize="@dimen/bigTextSize"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/translated" />

                <com.google.android.flexbox.FlexboxLayout
                    app:alignItems="flex_start"
                    app:flexDirection="row"
                    android:textColor="@color/colorPrimaryDark"
                    app:flexWrap="wrap"
                    android:id="@+id/translated_text"
                    style="@style/myTexts.center" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/info"
                android:layout_below="@+id/header"
                android:padding="@dimen/pad_10"
                android:layout_margin="@dimen/pad_30"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <include layout="@layout/progressbar"
                    android:visibility="invisible"
                    android:layout_centerHorizontal="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />

                <ImageButton
                    android:id="@+id/translate"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/imgbtn"
                    android:background="@null" />

                <TextView
                    android:id="@+id/translate_text"
                    android:layout_below="@+id/translate"
                    android:text="@string/tap_to_translate"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_centerHorizontal="true"
                    style="@style/myTexts" />

            </RelativeLayout>

        </RelativeLayout>
</ScrollView>
